--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "main": "index.ts",
   "scripts": {
     "docs-build": "markdown-docs build docs-src docs",
-    "docs-dev": "markdown-docs dev docs-src"
+    "docs-dev": "markdown-docs dev docs-src",
+    "dev-watch": "webpack watch"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "bip32": "^4.0.0",
+    "bitcoinjs-lib": "^6.1.3",
+    "darkreader": "^4.9.58",
+    "ecpair": "^2.1.0",
+    "tiny-secp256k1": "^2.2.2"
+  },
   "devDependencies": {
-    "@gi60s/markdown-docs": "^0.1.2"
+    "@gi60s/markdown-docs": "^0.1.2",
+    "ts-loader": "^9.4.3",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4"
   }
-  
 }
