--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bitcoinjs-lib": "^6.1.3",
     "darkreader": "^4.9.58",
     "ecpair": "^2.1.0",
-    "tiny-secp256k1": "^2.2.2"
+    "tiny-secp256k1": "^2.2.2",
+    "wolfram-notebook-embedder": "^0.3.0"
   },
   "devDependencies": {
     "@gi60s/markdown-docs": "^0.1.2",
