--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "bip32": "^4.0.0",
     "bitcoinjs-lib": "^6.1.3",
     "darkreader": "^4.9.58",
     "ecpair": "^2.1.0",
+    "schnorr-adaptor-points": "^0.1.0",
     "tiny-secp256k1": "^2.2.2",
+    "util": "^0.12.5",
     "wolfram-notebook-embedder": "^0.3.0"
   },
   "devDependencies": {
