--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "darkreader": "^4.9.58",
     "ecpair": "^2.1.0",
     "ecurve": "^1.0.6",
+    "js-sha256": "^0.9.0",
+    "random-bytes": "^1.0.0",
     "safe-buffer": "^5.2.1",
     "schnorr-adaptor-points": "^0.1.0",
     "tiny-secp256k1": "^2.2.2",
