--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@gi60s/markdown-docs": "^0.1.2",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "ts-loader": "^9.4.3",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
