--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bip-schnorr": "^0.6.7",
     "bip32": "^4.0.0",
     "bitcoinjs-lib": "^6.1.3",
+    "browserify": "^17.0.0",
     "darkreader": "^4.9.58",
     "ecpair": "^2.1.0",
     "ecurve": "^1.0.6",
@@ -33,6 +34,7 @@
     "@gi60s/markdown-docs": "^0.1.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "ts-loader": "^9.4.3",
+    "wasmify": "^4.0.0",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
   }
