--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "wolfram-notebook-embedder": "^0.3.0"
   },
   "devDependencies": {
-    "@gi60s/markdown-docs": "^0.1.2",
+    "markdown-docs": "dk14/markdown-docs#patch-1",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "ts-loader": "^9.4.3",
     "wasmify": "^4.0.0",
